# rust-ui-starters

./: README.md
AXUM_SCRATCH/: Cargo.toml
AXUM_SCRATCH copy for CLI/: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js
AXUM_SCRATCH copy for CLI/src/: app.rs  main.rs
AXUM_SCRATCH copy for CLI/style/: tailwind.css
FULLSTACK-EXAMPLES/RUST-FS-BLOGS/: README.md
FULLSTACK-EXAMPLES/RUST-FS-DASHBOARD/: Cargo.toml
FULLSTACK-EXAMPLES/RUST-FS-TODOS/: Cargo.toml  README.md  tailwind.config.js
FULLSTACK-EXAMPLES/RUST-FS-TODOS/backend/: .env  .gitignore  Cargo.toml
FULLSTACK-EXAMPLES/RUST-FS-TODOS/backend/.sqlx/: query-79e299174b10dcbd56128a167e433b176a482b53f2365431c5128a4f63ad8bfb.json  query-8ff810d10cd7ce60eb3395132840f6274ea841b915b5b910dfa2d76bbc86cc5e.json
FULLSTACK-EXAMPLES/RUST-FS-TODOS/backend/src/: main.rs
FULLSTACK-EXAMPLES/RUST-FS-TODOS/backend/src/models/: mod.rs
FULLSTACK-EXAMPLES/RUST-FS-TODOS/backend/src/services/: mod.rs
FULLSTACK-EXAMPLES/RUST-FS-XXX-Server/: .env  Cargo.toml
LABS-INTERNAL/: .gitignore  Cargo.toml  LOADERS_TODO.md
LEPTOS_V7/START_AXUM_V7/: Cargo.toml
LEPTOS_V7/START_TRUNK_V7/: FOLLOW_ALONG.md  index.html
LEPTOS_V7/leptos-07-white-sponge-TTB/: Cargo.toml  package.json  tailwind.config.js
SIMPLE/: Cargo.toml  TIPS.md  tailwind.config.js
START_AXUM_V7/: Cargo.toml  tailwind.config.js
START_TRUNK_V7/: Cargo.toml  README.md
TOAST/: Cargo.toml  tailwind.config.js
TROUBLESHOOT-PIN-VERSION-119/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  package.json  pnpm-lock.yaml
(+1499 files in other folders)
